<resources>
    <string name="app_name">Zomato App</string>
    <string name="search">Buscar</string>
    <string name="profile">Perfil</string>
    <string name="favorites">favoritos</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Nombre</string>
    <string name="last_name">Apellido</string>
    <string name="phone">Telefono</string>
    <string name="email">Correo electronico</string>
    <string name="save">Guardar</string>
    <string name="update">Actualizar</string>
</resources>
